--- a/public/css/Component/CenterManager/CenterManager_Dashboard.css
+++ b/public/css/Component/CenterManager/CenterManager_Dashboard.css
@@ -489,6 +489,17 @@
         background: #f2f2f2;
       }
 
+      .days li.selected {
+        /* position: relative;
+        height: 20px;
+        width: 20px; */
+        background-color: #3498db; 
+        color: #fff;
+        border-radius: 50%;  
+        z-index: 3;
+       
+        } 
+
 
    
 
@@ -874,6 +885,164 @@
             border-radius: 10px;
             box-shadow: var(--box-shadow);
         }
+    }
+
+    .overlay {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.1);
+        z-index: 2;
+        display: none;
+    }
+
+
+    /*Holiday popup*/
+    .confirm-hoildays-popup{
+        /* display: none;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        transform: translate(-50%, -50%) scale(0);
+        background-color: rgba(0, 0, 0, 0.1);
+        z-index: 2;
+        transition: transform 0.4s ease-in, background-color 0.4s ease-in;
+        align-items: center;
+        justify-content: center; */
+        display: flex;
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%) scale(0);
+        z-index: 4;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        overflow: hidden;
+        transition: transform 0.4s ease-in, background-color 0.4s ease-in;
+        box-shadow: var(--box-shadow);
+        border-radius: 10px;
+        background-color: var(--main-text-color);
+    }
+
+    .confirm-hoildays-popup.active {
+        transform: translate(-50%, -50%) scale(1);
+        background-color: rgba(0, 0, 0, 0);
+    }
+
+    .confirm-hoildays-form {
+        width: 500px;
+        background: white;
+        font-family: 'poppins', sans-serif;
+        border-radius: 6px;
+        padding:30px;
+        position: relative;
+        color: var(--main-text-color);
+        transition: transform 0.4s, top 0.4s;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .confirm-content-img{
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        width: 20px;
+        cursor: pointer;
+
+    }
+
+    /* .cancel-confirm-content input {
+        width: 70%;
+        height: 40px;
+        margin-bottom: 10px;
+        margin-top: 12px;
+        text-align: center;
+        font-size: 20px;
+        border-radius: 5px;
+        border: 1px solid black;
+    } */
+
+    .confirm-hoildays-form input {
+        height: 60px;
+        width: 97.5%;
+        border-radius: 5px;
+        border: 1px solid #ccc;
+        padding-left: 10px;
+        margin: 12px 0;
+        font-size: 14px;
+        letter-spacing: 0.03rem;
+        background-color: var(--background-color-two);
+        color: var(--main-text-color);
+    }
+
+    .confirm-hoildays-form input:focus {
+        border-color: var(--green-color-one);
+        outline: none;
+    }
+
+    .confirm-hoildays-form h1 {
+
+        font-size: 15px;
+        font-weight: 500;
+    }
+
+    .confim-cancel-content-box {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: row;
+    }
+
+    .cancel-confirm-button-container{
+        display: flex;
+        justify-content: flex-end;
+        align-items: center ;
+    }
+
+    .holiday-submit-button {
+        width: 20%;
+        height: 32px;
+        font-size: 14px;
+        border-radius: 5px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border: none;
+        margin-top: 10px;
+        background-color: var(--green-color-one);
+        cursor: pointer;
+        color: white;
+    }
+
+    
+    .holiday-submit-button:hover{
+        background: var(--button-hover-green);
+    }
+
+    .holiday-cancel-button{
+        width: 20%;
+        height: 32px;
+        font-size: 14px;
+        border-radius: 5px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border: none;
+        margin-left: 10px;
+        margin-top: 10px;
+        background-color: #bab3b3;
+        cursor: pointer;
+        color: white;
+    }
+
+    .holiday-cancel-button:hover{
+        background: #a7a1a1;
     }
 
    
