--- a/public/css/Component/CenterManager/CenterManager_Dashboard.css
+++ b/public/css/Component/CenterManager/CenterManager_Dashboard.css
@@ -387,6 +387,10 @@
         box-sizing: border-box;
       }
 
+      .wrapper.invalid-selection {
+        border: 2px solid rgb(220, 39, 39);
+      }
+
       .wrapper header{
         display: flex;
         align-items: center;
@@ -508,6 +512,11 @@
 
     .days li.marked::before{
         background:#ffcccb ;
+    }
+
+    .days li.marked:hover::before{
+        background:#ffcccb ;
+        color: var(--main-text-color);
     }
 
 
@@ -911,18 +920,6 @@
 
     /*Holiday popup*/
     .confirm-hoildays-popup{
-        /* display: none;
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        transform: translate(-50%, -50%) scale(0);
-        background-color: rgba(0, 0, 0, 0.1);
-        z-index: 2;
-        transition: transform 0.4s ease-in, background-color 0.4s ease-in;
-        align-items: center;
-        justify-content: center; */
         display: flex;
         position: fixed;
         top: 50%;
@@ -979,7 +976,7 @@
     } */
 
     .confirm-hoildays-form input {
-        height: 60px;
+        height: 33px;
         width: 97.5%;
         border-radius: 5px;
         border: 1px solid #ccc;
@@ -999,7 +996,17 @@
     .confirm-hoildays-form h1 {
 
         font-size: 15px;
+        font-weight: 550;
+        margin-bottom: 10px;
+    }
+
+    .confirm-hoildays-form p {
+        font-size: 14px;
         font-weight: 500;
+        /* color: rgb(220, 39, 39); */
+        margin-bottom: 5px;
+        line-height: 18px;
+
     }
 
     .confim-cancel-content-box {
