--- a/public/css/Component/CenterManager/CenterManager_Dashboard.css
+++ b/public/css/Component/CenterManager/CenterManager_Dashboard.css
@@ -385,6 +385,7 @@
         /* box-shadow: 0 15px 40px rgba(0,0,0,0.12); */
         box-shadow: var(--box-shadow);
         box-sizing: border-box;
+        border: 1px solid #fff;
       }
 
       .wrapper.invalid-selection {
