--- a/public/css/Component/CenterManager/CenterManager_Dashboard.css
+++ b/public/css/Component/CenterManager/CenterManager_Dashboard.css
@@ -586,6 +586,8 @@
 
     .main-right-bottom-two-cont i {
         font-size: 36px;
+        
+   
     }
 
     .main-right-bottom-two-cont h3 {
@@ -628,7 +630,8 @@
         background-color: var(--background-color-main);
         box-shadow: var(--box-shadow);
         display: grid;
-        grid-template-columns: 45% 55%;
+        grid-template-columns: 50% 50%;
+
     }
 
     .main-right-bottom-three-right-left {
@@ -638,10 +641,10 @@
     }
 
     .main-right-bottom-three-right-left h1 {
-        font-size: 18px;
-        margin-bottom: 8%;
-        font-size: 18px;
-        margin-top: 5%;
+       
+        margin-bottom: 7.2%;
+        font-size: 17px;
+        margin-top: 5.4%;
     }
 
     .main-right-bottom-three-right-cont {
@@ -653,8 +656,8 @@
 
     .circular-progress {
         position: relative;
-        height: 115px;
-        width: 115px;
+        height: 150px;
+        width: 150px;
         border-radius: 50%;
         background: conic-gradient(var(--green-color-two), 3.6deg, var(--background-color-two) 0deg);
         display: flex;
@@ -665,8 +668,8 @@
     .circular-progress::before {
         content: "";
         position: absolute;
-        height: 80px;
-        width: 80px;
+        height: 115px;
+        width: 115px;
         border-radius: 50%;
         background-color: var(--background-color-main);
         flex: 2;
@@ -679,35 +682,119 @@
         color: var(--green-color-two);
     }
 
-    .main-right-bottom-three-right-left button {
-        background-color: var(--green-color-one);
-        border: none;
-        border-radius: 10px;
-        width: 60%;
-        height: 15%;
-        font-size: 15px;
-        color: var(--background-color-main);
-        cursor: pointer;
-        letter-spacing: 0.03rem;
-        font-weight: bolder;
-        transition: background-color 0.6s ease-in;
-        margin-top: 6.1%;
-        animation: pulse 2s infinite;
+   .legend-container{
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        margin-top: 7%;
+   }
 
+   .uncompleted{
+        width: 15px;
+        height: 15px;
+        background:var(--background-color-two) ;
+        margin-right: 5px;
+   }
+
+   .completed{
+        width: 15px;
+        height: 15px;
+        background:var(--green-color-two);
+        margin-right: 5px;
+    }
+
+    .legend{
+        display: flex;
+
+    }
+
+    .LL{
+        margin-right: 20px;
+    }
+
+    .LR{
+        margin-left: 20px;
+    }
+
+    .legend span{
+        font-size: 14px;
+        
     }
 
     .main-right-bottom-three-right-right {
         display: flex;
         align-items: center;
         justify-content: center;
-        flex-direction: column;
+       
     }
 
     .main-right-bottom-three-right-right h1 {
-        font-size: 18px;
-        margin-bottom: 3%;
-        font-size: 18px;
+        /* font-size: 17px;
+        margin-bottom: 25px; */
+        margin-bottom: 8%;
+        font-size: 17px;
+        
     }
+
+    .complaints-container{
+        width: 100%;
+        height: 93%;
+        box-shadow: var(--box-shadow);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        border-radius: 10px;
+        padding: 10px 20px;
+    }
+
+    .complaints-container i{
+        font-size: 50px;
+        margin-bottom: 3%;
+
+    }
+
+    .complaints-container button{
+        background-color: var(--green-color-one);
+        border: none;
+        border-radius: 10px;
+        width: 50%;
+        height: 35px;
+        font-size: 15px;
+        color: var(--background-color-main);
+        cursor: pointer;
+        letter-spacing: 0.03rem;
+        font-weight: bolder;
+        transition: background-color 0.6s ease-in;
+        margin-bottom: 5%;
+
+    }
+
+    .complaints-container button:hover{
+        background: var(--button-hover-green);
+    }
+
+    .complaints-container p{
+        font-size: 14px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        margin-bottom: 13px;
+        margin-left: 5px;
+       
+
+    }
+
+    .complaints-container span{
+        font-size: 15px;
+        color: #3498db;
+        cursor: pointer;
+    }
+
+    .complaints-container span:hover{
+        color: #2f89c5;
+    }
+
+
 
     .map {
         width: 90%;
