--- a/public/css/Component/Collector/Collector_Dashboard.css
+++ b/public/css/Component/Collector/Collector_Dashboard.css
@@ -256,7 +256,7 @@
         border-radius: 10px;
         width: 60%;
         height: 23%;
-        font-size: 15px;
+        font-size: 17px;
         color: var(--background-color-main);
         cursor: pointer;
         letter-spacing: 0.03rem;
@@ -289,6 +289,10 @@
         font-size: 18px;
         color: var(--background-color-two);
 
+    }
+    
+    .main-right-bottom-one-left .right i {
+        font-size: 40px;
     }
 
     .main-right-bottom-one-left .right h3 {
