--- a/public/css/Component/Collector/Collector_Dashboard.css
+++ b/public/css/Component/Collector/Collector_Dashboard.css
@@ -375,7 +375,7 @@
     }
 
     .main-right-bottom-three-left {
-        width: 50%;
+        width: 48%;
         height: 90%;
         margin: 15px;
         border-radius: 10px;
@@ -422,7 +422,7 @@
     }
 
     .main-right-bottom-three-right {
-        width: 50%;
+        width: 100%;
         height: 90%;
         margin: 15px;
         border-radius: 10px;
@@ -516,6 +516,8 @@
         padding-top: 2%;
         height: 72%;
         border-radius: 10px;
+        margin-right: 5px;
+        margin-left: 10px;
         box-shadow: var(--box-shadow);
     }
 
