--- a/public/css/Component/Admin/Admin_Center_Manager_Add.css
+++ b/public/css/Component/Admin/Admin_Center_Manager_Add.css
@@ -177,17 +177,18 @@
     }
 
     .main-bottom-down-content-bottom-button button :hover {
-        background: #19954e;
+        background: var(--button-hover-green);
     }
 
+    /*Success popup*/
     .center_manager_success {
         position: fixed;
         top: 0;
         left: 0;
         width: 100%;
         height: 100%;
-        background-color: rgba(0, 0, 0, 0.5);
-        z-index: 1;
+        background-color: rgba(0, 0, 0, 0.1);
+        z-index: 2;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -240,7 +241,7 @@
         width: 100%;
         margin-top: 30px;
         padding: 10px 0;
-        background: #6fd649;
+        background: var(--green-color-one);
         color: white;
         border: 0;
         outline: none;
@@ -248,6 +249,10 @@
         border-radius: 4px;
         cursor: pointer;
         box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
+    }
+
+    .popup button:hover{
+        background: var(--button-hover-green);
     }
 
     @media screen and (max-width: 1068px) {
