--- a/public/css/Component/Admin/Admin_Collector.css
+++ b/public/css/Component/Admin/Admin_Collector.css
@@ -238,15 +238,15 @@
         border-radius: 50%;
     }
 
-
+    /*Delete confirm popup*/
     .delete_confirm {
         position: fixed;
         top: 0;
         left: 0;
         width: 100%;
         height: 100%;
-        background-color: rgba(0, 0, 0, 0.5);
-        z-index: 1;
+        background-color: rgba(0, 0, 0, 0.1);
+        z-index: 2;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -262,7 +262,7 @@
         top: 0;
         text-align: center;
         padding: 0 30px 30px;
-        color: #333;
+        color: var(--main-text-color);
         transition: transform 0.4s, top 0.4s;
     }
 
@@ -310,6 +310,10 @@
         box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
     }
 
+    .delete_confirm .deletebtn:hover{
+        background: #c62323;;
+    }
+
     .delete_confirm .cancelbtn {
         width: 150px;
         margin-top: 30px;
@@ -322,6 +326,10 @@
         border-radius: 4px;
         cursor: pointer;
         box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
+    }
+
+    .delete_confirm .cancelbtn:hover {
+        background: #a7a1a1;
     }
 
     @media screen and (max-width: 1178px) {
@@ -466,8 +474,8 @@
         position: fixed;
         top: 0;
         left: 0;
-        background-color: rgba(0, 0, 0, 0.5);
-        z-index: 1;
+        background-color: rgba(0, 0, 0, 0.1);
+        z-index: 2;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -484,7 +492,7 @@
         top: 0;
         text-align: center;
         padding: 0 30px 30px;
-        color: #333;
+        color: var(--main-text-color);
         transition: transform 0.4s, top 0.4s;
         display: flex;
         flex-direction: column;
@@ -568,7 +576,7 @@
         margin-bottom: 15px;
         height: 3px;
         width: 45px;
-        background: #1B6652;
+        background: var(--green-color-one);
 
     }
 
