--- a/public/css/Component/Admin/Admin_Customer_Complains.css
+++ b/public/css/Component/Admin/Admin_Customer_Complains.css
@@ -1,69 +1,4 @@
 .Admin_Customer_Complains {
-    * {
-        margin: 0;
-        padding: 0;
-        font-family: inter;
-    }
-
-    #complaints i {
-        color: var(--green-color-one);
-    }
-
-    #complaints h3 {
-        color: var(--green-color-one);
-    }
-
-    .confirm-cancel {
-        display: none;
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-color: rgba(0, 0, 0, 0.7);
-        z-index: 1;
-        align-items: center;
-        justify-content: center;
-
-    }
-
-    .confim-cancell-content {
-        background-color: #ecf0f1;
-        width: 40%;
-        height: 40%;
-        border-radius: 20px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: column;
-    }
-
-    .confim-cancell-content h1 {
-        margin-bottom: 20px;
-    }
-
-    .confim-cancell-content-box {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: row;
-    }
-
-    .confim-cancell-content-box button {
-        width: 120px;
-        height: 35px;
-        font-size: 18px;
-        border-radius: 5px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        border: none;
-        margin: 10px;
-        background-color: #74b9ff;
-        cursor: pointer;
-    }
-
-
 
     @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Leckerli+One&family=Open+Sans&family=Phudu&family=Poppins&family=Roboto:ital@0;1&family=Rubik:wght@500&family=Shrikhand&display=swap');
     @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Leckerli+One&family=Open+Sans&family=Phudu&family=Poppins&family=Roboto:ital@0;1&family=Rubik:wght@500&family=Shrikhand&display=swap');
@@ -79,6 +14,15 @@
         margin: 0;
         padding: 0;
         font-family: 'Inter';
+    }
+
+    
+    #complaints i {
+        color: var(--green-color-one);
+    }
+
+    #complaints h3 {
+        color: var(--green-color-one);
     }
 
 
@@ -266,7 +210,7 @@
     .main-right-top-three {
         display: flex;
         flex-direction: row;
-        padding-left: 34px;
+        padding-left: 38px;
         margin: 0.6%;
         background-color: var(--background-color-right);
     }
@@ -276,7 +220,7 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        margin-right: 15px;
+        margin-right: 18px;
         cursor: pointer;
     }
 
@@ -309,13 +253,13 @@
     }
 
     .table-header {
-        grid-template-columns: 10% 10% 8% 10% 14% 12% 25% 10%;
+        grid-template-columns: 11% 11% 12% 12% 14% 15% 25% ;
     }
 
     .table-row {
         height: 52px;
         display: grid;
-        grid-template-columns:  10% 10% 8% 10% 14% 12% 25% 10%;
+        grid-template-columns: 11% 11% 12% 12% 14% 15% 25%;
     }
 
     .table td {
@@ -338,6 +282,58 @@
         height: 25px;
         cursor: pointer;
     }
+
+       /* .confirm-cancel {
+        display: none;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.7);
+        z-index: 1;
+        align-items: center;
+        justify-content: center;
+
+    }
+
+    .confim-cancell-content {
+        background-color: #ecf0f1;
+        width: 40%;
+        height: 40%;
+        border-radius: 20px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+    }
+
+    .confim-cancell-content h1 {
+        margin-bottom: 20px;
+    }
+
+    .confim-cancell-content-box {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: row;
+    }
+
+    .confim-cancell-content-box button {
+        width: 120px;
+        height: 35px;
+        font-size: 18px;
+        border-radius: 5px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border: none;
+        margin: 10px;
+        background-color: #74b9ff;
+        cursor: pointer;
+    }
+ */
+
 
 
     @media screen and (max-width: 1250px) {
