--- a/public/css/Component/Admin/Admin_Collectors_Complains.css
+++ b/public/css/Component/Admin/Admin_Collectors_Complains.css
@@ -244,13 +244,13 @@
     }
 
     .table-header {
-        grid-template-columns: 9% 10% 11% 10% 14% 12% 15% 9% 9%;
+        grid-template-columns: 11% 11% 11% 11% 11% 11% 14% 20%;
     }
 
     .table-row {
         height: 52px;
         display: grid;
-        grid-template-columns:  9% 10% 11% 10% 14% 12% 15% 9% 9%;
+        grid-template-columns: 11% 11% 11% 11% 11% 11% 14% 20%;
     }
 
     .table td {
