--- a/public/css/Component/Admin/Admin_Centers_Complains.css
+++ b/public/css/Component/Admin/Admin_Centers_Complains.css
@@ -1,70 +1,4 @@
 .Admin_Centers_Complaints {
-    * {
-        margin: 0;
-        padding: 0;
-        font-family: inter;
-    }
-
-    #complaints i {
-        color: var(--green-color-one);
-    }
-
-    #complaints h3 {
-        color: var(--green-color-one);
-    }
-
-    .confirm-cancel {
-        display: none;
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-color: rgba(0, 0, 0, 0.7);
-        z-index: 1;
-        align-items: center;
-        justify-content: center;
-
-    }
-
-    .confim-cancell-content {
-        background-color: #ecf0f1;
-        width: 40%;
-        height: 40%;
-        border-radius: 20px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: column;
-    }
-
-    .confim-cancell-content h1 {
-        margin-bottom: 20px;
-    }
-
-    .confim-cancell-content-box {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: row;
-    }
-
-    .confim-cancell-content-box button {
-        width: 120px;
-        height: 35px;
-        font-size: 18px;
-        border-radius: 5px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        border: none;
-        margin: 10px;
-        background-color: #74b9ff;
-        cursor: pointer;
-    }
-
-
-
     @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Leckerli+One&family=Open+Sans&family=Phudu&family=Poppins&family=Roboto:ital@0;1&family=Rubik:wght@500&family=Shrikhand&display=swap');
     @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Leckerli+One&family=Open+Sans&family=Phudu&family=Poppins&family=Roboto:ital@0;1&family=Rubik:wght@500&family=Shrikhand&display=swap');
 
@@ -81,6 +15,13 @@
         font-family: 'Inter';
     }
 
+    #complaints i {
+        color: var(--green-color-one);
+    }
+
+    #complaints h3 {
+        color: var(--green-color-one);
+    }
 
     .main-right {
         display: grid;
@@ -340,6 +281,56 @@
         cursor: pointer;
     }
 
+    /* 
+    .confirm-cancel {
+        display: none;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.7);
+        z-index: 1;
+        align-items: center;
+        justify-content: center;
+
+    }
+
+    .confim-cancell-content {
+        background-color: #ecf0f1;
+        width: 40%;
+        height: 40%;
+        border-radius: 20px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+    }
+
+    .confim-cancell-content h1 {
+        margin-bottom: 20px;
+    }
+
+    .confim-cancell-content-box {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: row;
+    }
+
+    .confim-cancell-content-box button {
+        width: 120px;
+        height: 35px;
+        font-size: 18px;
+        border-radius: 5px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border: none;
+        margin: 10px;
+        background-color: #74b9ff;
+        cursor: pointer;
+    } */
 
     @media screen and (max-width: 1250px) {
         .main-left-middle-content h2 {
