discount agent add

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -112,6 +112,9 @@
 @import url('Component/Admin/Admin_Center_Manager.css');
 @import url('Component/Admin/Admin_Center_Manager_View.css');
 
+@import url('Component/Admin/Admin_Discount_Agent_Add.css');
+@import url('Component/Admin/Admin_Discount_Agent_View.css');
+
 @import url('Component/Admin/Admin_Collector.css');
 
 
