--- a/public/css/Component/Customer/Customer_Dashboard.css
+++ b/public/css/Component/Customer/Customer_Dashboard.css
@@ -72,6 +72,8 @@
         margin: 5px;
     }
 
+    /* Main Right Bottom One */
+
     .main-right-bottom-one {
         display: flex;
         flex-direction: row;
@@ -80,6 +82,9 @@
         width: 100%;
         height: 37%;
     }
+
+    /* Main Right Bottom One Left */
+
 
     .main-right-bottom-one-left {
         width: 50%;
@@ -169,6 +174,9 @@
         font-weight: bolder;
     }
 
+    /* Main Right Bottom One Right*/
+
+
     .main-right-bottom-one-right {
         width: 50%;
         height: 90%;
@@ -176,15 +184,55 @@
         border-radius: 10px;
         background-color: var(--background-color-main);
         box-shadow: var(--box-shadow);
+    }
+
+    .main-right-bottom-one-right h1 {
+        font-size: 18px;
+        margin-bottom: 4%;
+        padding-left: 7%;
+        padding-top: 2%;
+    }
+
+    .main-right-bottom-one-right-cont {
         display: flex;
-        color: var(--main-text-color);
-        flex-direction: column;
         align-items: center;
-        justify-content: center;
-        padding-bottom: 1%;
-        padding-top: 1%;
+        width: 100%;
+        margin-bottom: 2%;
+        padding-left: 7%;
         box-sizing: border-box;
     }
+
+    .main-right-bottom-one-right-cont img {
+        width: 41px;
+        height: 41px;
+        border-radius: 50%;
+        margin-right: 35px;
+    }
+
+    .td-pro_pic {
+        width: 41px;
+        height: 41px;
+        border-radius: 50%;
+    }
+
+    .main-right-bottom-one-right-cont h3 {
+        font-size: 15px;
+        width: 155px;
+    }
+
+    .main-right-bottom-one-right-cont p {
+        font-size: 13.5px;
+        width: 60px;
+        margin-right: 135px;
+    }
+
+    .main-right-bottom-one-right-cont h2 {
+        font-size: 15px;
+        color: var(--green-color-one);
+        width: 20%;
+    }
+
+    /* Main Right Bottom Two */
 
     .main-right-bottom-two {
         display: flex;
@@ -218,9 +266,21 @@
         margin-right: 10px;
     }
 
+    .content_container {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .content_container h2 {
+        margin-top: 5px;
+        font-size: 22px;
+
+    }
+
     .main-right-bottom-two-cont i {
         font-size: 36px;
     }
+
 
     .main-right-bottom-two-cont h3 {
         width: 145px;
@@ -239,6 +299,8 @@
         height: 45%;
     }
 
+    /*Main Right Bottom Three Left Right*/
+
     .main-right-bottom-three-left {
         width: 50%;
         height: 90%;
@@ -246,78 +308,82 @@
         border-radius: 10px;
         background-color: var(--background-color-main);
         box-shadow: var(--box-shadow);
-    }
-
-    .main-right-bottom-three-left h1 {
-        font-size: 18px;
-        margin-bottom: 4%;
-        padding-left: 7%;
-        padding-top: 2%;
-    }
-
-    .main-right-bottom-three-left-cont {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        width: 100%;
-        margin-bottom: 3%;
-        padding-left: 7%;
-    }
-
-    .main-right-bottom-three-left-cont img {
-        width: 45px;
-        height: 45px;
-        border-radius: 50%;
-        margin-right: 15px;
-    }
-
-    .main-right-bottom-three-left-cont h3 {
-        font-size: 15px;
-        width: 250px;
-        margin-left: -14%;
-    }
-
-    .main-right-bottom-three-left-cont h2 {
-        font-size: 18px;
-        color: var(--green-color-one);
-        width: 175px;
-    }
-
-    .main-right-bottom-three-right {
-        width: 50%;
-        height: 90%;
-        margin: 15px;
-        border-radius: 10px;
-        background-color: var(--background-color-main);
-        box-shadow: var(--box-shadow);
         display: grid;
-        grid-template-columns: 45% 55%;
+        grid-template-columns: 50% 50%;
     }
 
-    .main-right-bottom-three-right-left {
+    /*Main Right Bottom Three Left Right*/
+    .main-right-bottom-three-left-left {
         display: flex;
-        align-items: center;
         flex-direction: column;
+        justify-content: center;
+        width: 100%;
+        padding-top: 5%;
+        padding-left: 10%;
     }
 
-    .main-right-bottom-three-right-left h1 {
+    .main-right-bottom-three-left-left h3 {
         font-size: 18px;
-        margin-bottom: 8%;
-        font-size: 18px;
-        margin-top: 5%;
+        margin-bottom: 5%;
+        color: var(--green-color-one);
+        letter-spacing: 0.02rem;
     }
 
-    .main-right-bottom-three-right-cont {
+    .main-right-bottom-three-left-left p {
+        font-size: 15px;
+        margin-bottom: 7%;
+        letter-spacing: 0.05rem;
+        font-weight: 700;
+    }
+
+    .main-right-bottom-three-left-left span {
+        margin-top: 10px;
+        color: rgb(220, 39, 39);
+        font-size: 14px;
+    }
+
+    .main-right-bottom-three-left-left button {
+        background-color: var(--green-color-one);
+        border: none;
+        border-radius: 10px;
+        width: 60%;
+        height: 17%;
+        font-size: 15px;
+        color: var(--background-color-main);
+        cursor: pointer;
+        letter-spacing: 0.03rem;
+        font-weight: bolder;
+        transition: background-color 0.6s ease-in;
+    }
+
+    .main-right-bottom-three-left-left button:hover {
+        background-color: var(--green-color-two);
+    }
+
+    /*Main Right Bottom Three Left Right*/
+
+    .main-right-bottom-three-left-right {
         display: flex;
         align-items: center;
         justify-content: center;
         flex-direction: column;
     }
 
+    .main-right-bottom-three-left-right h1 {
+        margin-bottom: 7.2%;
+        font-size: 17px;
+    }
+
+    .main-right-bottom-three-left-right-cont {
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+    }
+
     .circular-progress {
         position: relative;
-        height: 115px;
-        width: 115px;
+        height: 135px;
+        width: 135px;
         border-radius: 50%;
         background: conic-gradient(var(--green-color-two), 3.6deg, var(--background-color-two) 0deg);
         display: flex;
@@ -328,8 +394,8 @@
     .circular-progress::before {
         content: "";
         position: absolute;
-        height: 80px;
-        width: 80px;
+        height: 102px;
+        width: 102px;
         border-radius: 50%;
         background-color: var(--background-color-main);
         flex: 2;
@@ -342,43 +408,60 @@
         color: var(--green-color-two);
     }
 
-    .main-right-bottom-three-right-left button {
-        background-color: var(--green-color-one);
-        border: none;
-        border-radius: 10px;
-        width: 60%;
-        height: 15%;
-        font-size: 15px;
-        color: var(--background-color-main);
-        cursor: pointer;
-        letter-spacing: 0.03rem;
-        font-weight: bolder;
-        transition: background-color 0.6s ease-in;
-        margin-top: 6.1%;
-        animation: pulse 2s infinite;
-
-    }
-
-    .main-right-bottom-three-right-right {
+    .legend-container {
         display: flex;
         align-items: center;
-        justify-content: center;
-        flex-direction: column;
+        justify-content: space-between;
+        margin-top: 7%;
     }
 
-    .main-right-bottom-three-right-right h1 {
-        font-size: 18px;
-        margin-bottom: 3%;
-        font-size: 18px;
+    .uncompleted {
+        width: 15px;
+        height: 15px;
+        background: var(--background-color-two);
+        margin-right: 5px;
     }
 
-    .map {
-        width: 90%;
-        padding-top: 2%;
-        height: 72%;
+    .completed {
+        width: 15px;
+        height: 15px;
+        background: var(--green-color-two);
+        margin-right: 5px;
+    }
+
+    .legend {
+        display: flex;
+    }
+
+    .LL {
+        margin-right: 20px;
+    }
+
+    .LR {
+        margin-left: 20px;
+    }
+
+    .legend span {
+        font-size: 14px;
+    }
+
+    /*Main Right Bottom Three Right*/
+
+    .main-right-bottom-three-right {
+        width: 50%;
+        height: 90%;
+        margin: 15px;
         border-radius: 10px;
+        background-color: var(--background-color-main);
         box-shadow: var(--box-shadow);
+        padding: 15px;
+        box-sizing: border-box;
+
     }
+
+
+
+    /* Eco Credit Pop*/
 
     .eco_credit_per_quantity {
         display: flex;
