--- a/public/css/Component/Admin/Admin_Center_Main_Request_Incoming.css
+++ b/public/css/Component/Admin/Admin_Center_Main_Request_Incoming.css
@@ -64,71 +64,19 @@
         cursor: pointer;
     }
 
-
-    /* .main-right-bottom-top {
-        width: 99%;
-        padding-left: 1%;
-
+    .overlay {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.1);
+        z-index: 2;
+        display: none;
     }
-
-    .table {
-        padding-left: 1%;
-        width: 99%;
-        border-collapse: collapse;
-        text-align: center;
-        padding-left: 1%;
-    }
-
-    .table-header th {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        text-align: center;
-    }
-
-    .table-header {
-        background-color: #ecf0f1;
-        font-size: 17px;
-        font-family: Montserrat;
-        text-align: center;
-        height: 55px;
-        display: grid;
-        grid-template-columns: 8% 8% 14% 13% 13% 13% 13% 16%;
-    }
-
-    .table-row {
-        font-size: 1px;
-        font-family: Montserrat;
-        text-align: center;
-        height: 55px;
-        display: grid;
-        grid-template-columns: 8% 8% 14% 13% 13% 13% 13% 16%;
-        border-bottom: 2px solid #CACACA;
-    }
-
-    .table td {
-        height: 55px;
-        font-size: 16px;
-        vertical-align: middle;
-        text-align: center;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        overflow-y: scroll;
-    }
-
-    td img {
-        margin: 6px;
-    }
-
-    .table-row img {
-        width: 25px;
-        height: 25px;
-        cursor: pointer;
-    } */
 
     /*Location Pop*/
-    .location_pop {
+    /* .location_pop {
         display: none;
         position: fixed;
         top: 0;
@@ -140,11 +88,30 @@
         justify-content: center;
         width: 100%;
         height: 100%;
+    } */
+
+    .location_pop {
+        display: flex;
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%) scale(0);
+        background-color: rgba(0, 0, 0, 0);
+        z-index: 4;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        overflow: hidden;
+        transition: transform 0.4s ease-in, background-color 0.4s ease-in;
+    }
+
+    .location_pop.active {
+        transform: translate(-50%, -50%) scale(1);
     }
 
     .location_pop_content {
-        width: 70%;
-        height: 78%;
+        width: 700px;
+        height: 350px;
         padding: 10px;
         background-color: #f1f2f6;
         border-radius: 10px;
